--- a/react-practice/react_typescript_app/package.json
+++ b/react-practice/react_typescript_app/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
@@ -44,6 +45,7 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@types/react-router-dom": "^5.3.2",
     "framer-motion": "^4.1.17"
   }
 }
