--- a/react-practice/react_typescript_app/package.json
+++ b/react-practice/react_typescript_app/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
